# ur3e-control

./: .gitignore  Collision_test.ipynb  DuckifySim.ipynb  Duckify_main.py  Duckify_main_.py  Example_pipeline.ipynb  ISCoin.ipynb  Test_example.ipynb  Test_simulation.ipynb  draw_shape_live.ipynb  duck_model.stl  duck_uv-fancy_test_duck-trace.json  force_log.csv  inspect_traces.py  log.txt  pickleview.py  pybullet_collision_test.py  pybullet_duck_reachability.py  pybullet_main.py  pybullet_planner_test.py  pybullet_test.py  pyproject.toml  random_pt_gen.py  real_practice.ipynb  requirements.txt  robot_main.py  support_placement.py  support_placement_heatmap.py  trapezoid_letters-trapezoid_letters-trace.json  visualize_duck_points.py
my_simulation/: __init__.py  gazebo_control.ipynb  iscoin_sim.py  live  math_review.ipynb  square.py  test.py
notebooks/: coordinate_transform_verification.ipynb  duck_stl_and_waypoints.ipynb  visual_pathfinding.ipynb
report/: tcp_calibration_guide.md  wrapper_technical_report.md
robot_reports/: draw_shape_report.md  multiface_drawing_plan.md  pathfinding_report.md  setup-guide.md  wrapper_report.md
save_data/: log.txt  transformation_data.pkl  transformation_default.pkl  transformation_test.pkl  waypoints_0.pkl  waypoints_1.pkl  waypoints_13.pkl  waypoints_15.pkl  waypoints_17.pkl  waypoints_19.pkl  waypoints_2.pkl  waypoints_24.pkl  waypoints_27.pkl  waypoints_33.pkl  waypoints_36.pkl  waypoints_38.pkl  waypoints_39.pkl  waypoints_4.pkl  waypoints_41.pkl  waypoints_42.pkl  waypoints_43.pkl  waypoints_44.pkl  waypoints_45.pkl  (+8 more)
(+110 files in other folders)
