[project]
name = "iscoin"
version = "0.1.0"
description = "Starter code for Engineering Track 304 course"
authors = [
    { name = "AMA", email = "axel.amand@hevs.ch" },
    { name = "RIU", email = "murielle.richard@hevs.ch" },
    { name = "AZL", email = "loic.azzalini@hevs.ch" },
]
requires-python = ">=3.10,<3.12"
readme = "README.md"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "ipykernel>=6.29.5,<7",
    "numpy>=2.2.3,<3",
    "scipy>=1.15.2,<2",
    "pillow>=11.1.0,<12",
    "requests>=2.32.3,<3",
    "opencv-python>=4.11.0.86,<5",
    "setuptools==59.6.0",
    "urbasic",
    "trimesh>=4.11.2",
    "rtree>=1.4.1",
    "matplotlib>=3.10.8",
]

[tool.uv]
package = false

[tool.uv.sources]
urbasic = { path = "urbasic", editable = true }

[build-system]
requires = ["uv_build>=0.8.23,<0.9.0"]
build-backend = "uv_build"
